src/objects/Activity_Report__c.object
<CustomObject>
    <description>For use by the Premier office to log activity reports on meetings/calls with potential clients</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>One the customer has opened an account, use the look up icon to attach to the their profile.</inlineHelpText>
        <label>Customer Profile</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Activity_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name_of_Client__c</fullName>
        <label>Target name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sourced_by__c</fullName>
        <label>Sourced by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Relationship Manager</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_type__c</fullName>
        <label>Target type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Referrer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Premier Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Name_of_Client__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Activity_Reports</fullName>
        <columns>NAME</columns>
        <columns>Name_of_Client__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Contact_Number__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <label>My Activity Reports</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{DD}{MM}{YY}-{00}</displayFormat>
        <label>Activity Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>